# qt_gesture_tester

./: CMakeLists.txt  main.cpp  touchpadtester.cpp  touchpadtester.h
